# LearnOpenGL

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: shader.hpp
shaders/: shader.frag  shader.vert
src/: main.cpp  shader.cpp  stb_image.cpp
